# tangentbug

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: bugtangent.launch  bugtangent.world  tangentbug.launch  tangentbug.world
src/: setpoint_fixed.cpp  tangentbug.cpp
